fix: add no-wrap class in badge

--- a/source/portal/src/pages/common-badge/style.scss
+++ b/source/portal/src/pages/common-badge/style.scss
@@ -11,10 +11,13 @@
   background: #89bdee !important;
 }
 
-.classified-badge {
-  user-select: none;
+.word-wrap {
   word-break: break-all !important;
   white-space: break-spaces;
+}
+
+.classified-badge {
+  user-select: none;
   .classified-icon {
     top: 4px;
   }
